--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spotify-tools-2",
+  "homepage": "https://github.com/hwbrent/spotify-tools/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.11.6"
+    "@types/node": "^16.11.6",
+    "gh-pages": "^3.2.3"
   }
 }
