corrected package.json homepage url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-tools-2",
-  "homepage": "https://github.com/hwbrent/spotify-tools/",
+  "homepage": "https://hwbrent.github.io/spotify-tools/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
